Fix candy name and img alignment

--- a/src/index.css
+++ b/src/index.css
@@ -136,9 +136,9 @@ code {
   box-sizing: border-box;
 }
 
-.item-name {
+/* .item-name {
   position: relative;
-}
+} */
 
 /* FILTER CONTAINER AND SUB-FILTERS */
 
